src/test/deca/syntax/valid/aritmetic_operators.deca
{
    int a = 2+2;
    int b = 2-2;
    int c = 2/2;
    int d = 2*2;
    int e = 2%2;

}