src/test/deca/syntax/invalid/int-error.deca
{
    float a = 100000000;
    float b = 100000000;
    float c ;
    c = a*b*b*b*100000*b*b*b*100000*b*b*b*100000;
}